<resources>
    <string name="app_name">Quiz</string>
    <string name="scoreboardTitle">Scoreboard</string>
    <string name="mainTitle">Football Quiz</string>
    <string name="nextButton">Next</string>
    <string name="previousButton">Previous</string>
    <string name="playButton">Play</string>
    <string name="scoreboardButton">Scoreboard</string>
    <string name="premierLeagueButton">Premier League Table</string>
    <string name="quitButton">Quit</string>
    <string name="news">News</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signIn">SignIn</string>
    <string name="title_activity_register">Register</string>

</resources>
