<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/mainTitle"
        android:layout_marginTop="50dp"
        android:textColor="@android:color/background_dark"
        android:textSize="36sp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_Play"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:onClick="button_PlayClicked"
        android:text="@string/playButton"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/button_Scoreboard"
        android:layout_width="350dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:onClick="button_ScoreboardClicked"
        android:text="@string/scoreboardButton"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/button_PremierTable"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:onClick="button_PremierTable"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/premierLeagueButton" />

    <Button
        android:id="@+id/button_Quit"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="button_QuitClicked"
        android:text="@string/quitButton"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>